# swagger.yaml
@@ -127,17 +127,11 @@ paths:
           description: User updated successfully
         400:
           description: Invalid input
-  /auth/{userId}:
     get:
-      summary: Get user by ID
+      summary: Get current user details
       tags: [Auth]
-      parameters:
-        - in: path
-          name: userId
-          required: true
-          schema:
-            type: string
-          description: The user ID
+      security:
+        - bearerAuth: []
       responses:
         200:
           description: User found
@@ -155,6 +149,14 @@ paths:
                   email:
                     type: string
                     format: email
+                  createdOn:
+                    type: string
+                    format: date-time
+                  updatedOn:
+                    type: string
+                    format: date-time
+                  isActive:
+                    type: string
         404:
           description: User not found
   /auth/test-delete:
